# exercises

./: .gitmodules
algos_4th_ed/2_sum_3_sum/source/: CMakeLists.txt  main.cpp
algos_4th_ed/2_sum_3_sum/testing/: subl
algos_4th_ed/bitonic_search/source/: CMakeLists.txt  main.cpp
algos_4th_ed/bitonic_search/testing/: bitonic1ElCenterLeft32KInts.txt  bitonic2ElCenterLeft32KInts.txt  bitonicCenter16KInts.txt  bitonicCenter1KInts.txt  bitonicCenter2KInts.txt  bitonicCenter32KInts.txt  bitonicCenter4KInts.txt  bitonicCenter8KInts.txt  bitonicCenterLeft32KInts.txt  bitonicCenterRight32KInts.txt  randomDub.py
algos_4th_ed/ch_1.4/hot_or_cold/: hot_cold_proto.py
algos_4th_ed/ch_1.5/QuickFind_and_QuickUnion/source/: .gitignore  CMakeLists.txt  (+3 more)
algos_4th_ed/colsest_pair/source/: CMakeLists.txt  main.cpp
algos_4th_ed/colsest_pair/testing/: 16Kdoubles.txt  1Kdoubles.txt  2Kdoubles.txt  32Kdoubles.txt  4Kdoubles.txt  8Kdoubles.txt  algo_out.txt  out.txt  randomDub.py
algos_4th_ed/fibonacci_search/source/: CMakeLists.txt  main.cpp
spoj/15_pzzl/source/: CMakeLists.txt  main.cpp
spoj/aggressive_cows/source/: CMakeLists.txt  main.cpp
spoj/alphacode/: read_me.txt
spoj/alphacode/source/: main.cpp
spoj/bytelandian_gold_coins/source/: CMakeLists.txt  main.cpp
spoj/inversion_count/: read_me.txt
spoj/inversion_count/source/: CMakeLists.txt  fast_main.cpp  main.cpp
spoj/inversion_count/testing/: 16_k_range.txt  16_range.txt  1_k_range_1.txt  2_k_range.txt  4_k_range.txt  64_k_range.txt  8_k_range.txt  test_gen.py
tc/car_loan/source/: CMakeLists.txt  main.cpp
(+9 files in other folders)
